--- a/lose.html
+++ b/lose.html
@@ -12,7 +12,7 @@
         <img src="Mario/mario3.jpg" id="sad" alt="" />
       </div>
       <div id="lostText">
-        <h1>OH NOOOO!!!!! YOU LOST😓😓😓</h1>
+        <h1>OH NOOOO!!!!! YOU DIDN'T SAVE MOLE😓😓😓</h1>
         <h2>SCORE: <span id="score">0</span></h2>
         <button id="play">PLAY AGAIN</button>
       </div>
