--- a/win.html
+++ b/win.html
@@ -12,7 +12,7 @@
         <img src="Mario/mario5.jpg" id="happy" alt="" />
       </div>
       <div id="wonText">
-        <h1>HURRAY!!!!! YOU WON🤩🤩🤩</h1>
+        <h1>HURRAY!!!!! YOU SAVED MOLE🤩🤩🤩</h1>
         <h2>SCORE: <span id="score"></span></h2>
         <button id="play">PLAY AGAIN</button>
       </div>
