--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="game.css" />
+    <link rel="stylesheet" href="./game.css" />
   </head>
   <body>
     <h1>WHAC A MOLE</h1>
@@ -12,5 +12,5 @@
     <div id="board"></div>
     <!-- <img src="Mario/soil.png" id="soil" alt="" /> -->
   </body>
-  <script src="game.js"></script>
+  <script src="./game.js"></script>
 </html>
