--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <img src="Mario/mario1.webp" alt="" />
-    <div>
-      <h1>WHAC A MOLE</h1>
-      <button id="enter">ENTER</button>
+    <div class="main-container">
+      <div class="img-container">
+        <img src="Mario/mario1.webp" alt="" />
+      </div>
+      <div id="text">
+        <h1>WHAC A MOLE</h1>
+        <button id="enter">ENTER</button>
+      </div>
     </div>
   </body>
-  <script src="index.js"></script>
-  <script src="sound.js"></script>
+  <script src="./index.js"></script>
+  <script src="./sound.js"></script>
 </html>
