--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="play.css" />
+    <link rel="stylesheet" href="./play.css" />
   </head>
 
   <body>
@@ -34,6 +34,6 @@
     </div>
     <!-- <audio src="Mario/bg.mp3" id="bg"></audio> -->
   </body>
-  <script src="play.js"></script>
-  <script src="sound.js"></script>
+  <script src="./play.js"></script>
+  <script src="./sound.js"></script>
 </html>
