--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="profile.css" />
+    <link rel="stylesheet" href="./profile.css" />
   </head>
   <body>
     <img src="Mario/mario1.webp" id="mario" />
@@ -22,6 +22,6 @@
       </form>
     </div>
   </body>
-  <script src="profile.js"></script>
-  <script src="sound.js"></script>
+  <script src="./profile.js"></script>
+  <script src="./sound.js"></script>
 </html>
