--- a/win.html
+++ b/win.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <link rel="stylesheet" href="win.css" />
+  <link rel="stylesheet" href="./win.css" />
   <body>
     <div class="container">
       <div>
@@ -18,5 +18,5 @@
       </div>
     </div>
   </body>
-  <script src="win.js"></script>
+  <script src="./win.js"></script>
 </html>
