--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
           <span><img src="Mario/user.png" id="user" alt="" />PROFILE</span>
         </h2>
         <br />
-        <form action="">
+        <form action="" id="submitForm">
           <label for="userName">USER NAME:</label>
           <input
             type="text"
@@ -26,7 +26,7 @@
           /><br /><br />
           <label for="nickName">NICK NAME:</label>
           <input type="text" id="nickName" name="nickName" required /><br />
-          <button id="submit">SUBMIT</button>
+          <button type="submit" id="submit">SUBMIT</button>
         </form>
       </div>
     </div>
